--- a/index.html
+++ b/index.html
@@ -167,12 +167,14 @@
       <h3>Galeria</h3>
 
       <div class="carousel">
-        <div><img src="./assets/images/reaper.png" alt=""></div>
-        <div><img src="./assets/images/reaper.png" alt=""></div>
-        <div><img src="./assets/images/reaper.png" alt=""></div>
-        <div><img src="./assets/images/reaper.png" alt=""></div>
-        <div><img src="./assets/images/reaper.png" alt=""></div>
-        <div><img src="./assets/images/reaper.png" alt=""></div>
+        <div><img src="./assets/images/robot-1.jpg" alt=""></div>
+        <div><img src="./assets/images/robot-2.jpg" alt=""></div>
+        <div><img src="./assets/images/robot-3.jpg" alt=""></div>
+        <div><img src="./assets/images/robot-4.jpg" alt=""></div>
+        <div><img src="./assets/images/robot-5.jpg" alt=""></div>
+        <div><img src="./assets/images/robot-6.jpg" alt=""></div>
+        <div><img src="./assets/images/robot-7.jpg" alt=""></div>
+        <div><img src="./assets/images/robot-8.jpg" alt=""></div>
       </div>
     </div>
     <div class="contact">
