feat: add content

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
   </header>
   <main>
     <div class="introduction">
-      <img src="./assets/images/reaper.png">
+      <img src="./assets/images/reaper.png" alt="introduction">
     </div>
     <div id="about" class="about">
       <div class="row">
         <section>
           <h4>Um pouco mais sobre o robo</h4>
-          <p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos.</p>
+          <p>O Reaper, é um robo criado com a finalidade de ser usado em competições contra outros robos. Sua estrutura é feita da MDF, uma madeira resistente e barata, também conta com um arduino de tipo Placa Uno R3 com tensão de operação de 5V que acompanha um cabo USB para sua conexão e recebimento de seus códigos de programação, três rodas para a movimentação, uma caixa onde ficará a bateria, um protoboard 400 Pontos onde a ele será ligados os jumpers vindos da Placa UNO R3 e duas foices como armas do robo.</p>
         </section>
         <section>
-          <img src="./assets/images/reaper.png" alt="">
+          <img src="./assets/images/reaper.png" alt="reaper">
         </section>
       </div>
     </div>
@@ -114,14 +114,14 @@
       </section>
     </article>
     <div id="hardware" class="about hardware">
-      <div class="hr"></div>
+      <h3>Hardware</h3>
       <div class="row">
         <section>
           <img src="./assets/images/hardware.png" alt="">
         </section>
         <section>
           <h4>Um pouco mais sobre o robo</h4>
-          <p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos.</p>
+          <p>O Arduino Uno é uma placa microcontrolada baseada no ATmega328. Possui 20 pinos de entrada / saída digital (dos quais 6 podem ser usados ​​como saídas PWM e 6 podem ser usados ​​como entradas analógicas), um ressonador de 16 MHz, uma conexão USB, um conector de alimentação de positivce central de 2,5 mm, um serial em circuito cabeçalho de programação (ICSP) e um botão de reinicialização. Ele contém tudo o que é necessário para dar suporte ao microcontrolador; simplesmente conecte-o a um computador com um cabo USB ou ligue-o com um adaptador AC-DC ou bateria para começar.</p>
         </section>
       </div>
     </div>
