feat: content and responsive

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <img src="./assets/icons/menu.png" alt="">
       </button>
       <ul id="toggle_nav">
-        <li><a href="#about">Sobre</a></li>
-        <li><a href="#hardware">Hardware</a></li>
-        <li><a href="#functions">Funcionaliades</a></li>
-        <li><a href="#team">Equipe</a></li>
-        <li><a href="#contact">Contato</a></li>
+        <li><a href="#about" id="nav_link_1">Sobre</a></li>
+        <li><a href="#hardware" id="nav_link_2">Hardware</a></li>
+        <li><a href="#functions" id="nav_link_3">Funcionaliades</a></li>
+        <li><a href="#team" id="nav_link_4">Equipe</a></li>
+        <li><a href="#contact" id="nav_link_5">Contato</a></li>
       </ul>
     </nav>
   </header>
@@ -32,7 +32,7 @@
       <div class="row">
         <section>
           <h4>Um pouco mais sobre o robo</h4>
-          <p>O Reaper, é um robo criado com a finalidade de ser usado em competições contra outros robos. Sua estrutura é feita da MDF, uma madeira resistente e barata, também conta com um arduino de tipo Placa Uno R3 com tensão de operação de 5V que acompanha um cabo USB para sua conexão e recebimento de seus códigos de programação, três rodas para a movimentação, uma caixa onde ficará a bateria, um protoboard 400 Pontos onde a ele será ligados os jumpers vindos da Placa UNO R3 e duas foices como armas do robo.</p>
+          <p>O Reaper, é um robô criado com a finalidade de ser usado em competições contra outros robôs. Sua estrutura é feita a partir de MDF, uma madeira resistente e barata, sua parte técnica conta com um arduino de tipo Placa Uno R3 com tensão de operação de 5V, que acompanha um cabo USB para sua conexão e recebimento de seus códigos de programação, três rodas para a movimentação, uma caixa onde ficará a bateria, um protoboard 400 Pontos que a ele serão ligados os jumpers vindos da Placa UNO R3 e duas foices como armas para nosso robô.</p>
         </section>
         <section>
           <img src="./assets/images/reaper.png" alt="reaper">
@@ -46,68 +46,56 @@
         <div class="input-flex-container">
           <div class="input">
             <span
-              data-year="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed magna lectus"
+              data-year="A Ideia inicial do projeto para finalidade de competição contra outros robôs."
             ></span>
           </div>
           <div class="input">
             <span
-              data-info="Ipsum dolor sit amet, consectetur adipiscing elit."
+              data-info="Idealização do projeto através de maquetes e desenhos."
             ></span>
           </div>
           <div class="input">
             <span
-              data-year="Praesent vel felis eu odio porta tincidunt. Maecenas porta imperdiet elementum."
+              data-year="Busca pelos melhores materiais para uso competitivo."
             ></span>
           </div>
           <div class="input">
             <span
-              data-info="Vel felis eu odio porta tincidunt. Mas porta imperdiet elementum."
+              data-info="Programação e montagem do robô."
             ></span>
           </div>
           <div class="input">
             <span
-              data-year="Maecenas porta imperdiet elementum."
+              data-year="Conclusão do trabalho para a competição contra as demais equipes."
             ></span>
           </div>
-        </div>
-        <div class="description-flex-container">
-          <p>And future Call of Duty players would thank them.</p>
-          <p>Because every kid should get to be Tarzan for a day.</p>
-          <p>And the world rejoiced.</p>
-          <p>Because building roads is inconvenient.</p>
-          <p>Ain’t nobody got time to rake.</p>
-          <p>Because paper currency is for noobs.</p>
-          <p>Nobody likes cords. Nobody.</p>
-          <p>Brighter than glow memory.</p>
-          <p>To capitalize on an as-yet nascent market for cat photos.</p>
-          <p>Because organic search rankings take work.</p>
         </div>
       </div>
       <section class="mobile_timeline">
         <ul>
           <li>
             <div class="content">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed magna <lectus></lectus></p>
+              <p>A Ideia inicial do projeto para finalidade de competição contra outros robôs.</p>
             </div>
           </li>
           <li>
             <div class="content">
-              <p>Ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <p>Idealização do projeto através de maquetes e desenhos.</p>
             </div>
           </li>
           <li>
             <div class="content">
-              <p>Praesent vel felis eu odio porta tincidunt. Maecenas porta imperdiet elementum.</p>
+              <p>Busca pelos melhores materiais para uso competitivo.</p>
             </div>
           </li>
           <li>
             <div class="content">
-              <p>Vel felis eu odio porta tincidunt. Mas porta imperdiet elementum.</p>
+              <p>Programação e montagem do robô.</p>
             </div>
           </li>
           <li>
             <div class="content">
-              <p>Maecenas porta imperdiet elementum.</p>
+              <p>Conclusão do trabalho para a competição contra as demais equipes.</p>
             </div>
           </li>
         </ul>
@@ -120,8 +108,8 @@
           <img src="./assets/images/hardware.png" alt="">
         </section>
         <section>
-          <h4>Um pouco mais sobre o robo</h4>
-          <p>O Arduino Uno é uma placa microcontrolada baseada no ATmega328. Possui 20 pinos de entrada / saída digital (dos quais 6 podem ser usados ​​como saídas PWM e 6 podem ser usados ​​como entradas analógicas), um ressonador de 16 MHz, uma conexão USB, um conector de alimentação de positivce central de 2,5 mm, um serial em circuito cabeçalho de programação (ICSP) e um botão de reinicialização. Ele contém tudo o que é necessário para dar suporte ao microcontrolador; simplesmente conecte-o a um computador com um cabo USB ou ligue-o com um adaptador AC-DC ou bateria para começar.</p>
+          <h4>Nosso arduino</h4>
+          <p>O Arduino Uno é uma placa microcontrolada baseada no ATmega328. Possui 20 pinos de entrada / saída digital (dos quais 6 podem ser usados como saídas PWM e 6 podem ser usados como entradas analógicas), um ressonador de 16MHz, uma conexão USB, um conector de alimentação de positivo central de 2,5 mm, um serial em circuito cabeçalho de programação (ICSP) e um botão de reinicialização. Ele contém tudo o que é necessário para dar suporte ao microcontrolador; simplesmente conecte-o a um computador com um cabo USB ou ligue-o com um adaptador AC-DC ou bateria para começar.</p>
         </section>
       </div>
     </div>
@@ -129,16 +117,18 @@
       <h3>Funcionalidades</h3>
       <div class="row">
         <div class="item">
-          <img src="./assets/icons/battle.png" alt="">
-          <p>Non turpis get laoreet purus dictum quisvitae ornare. Quisque quis augue convallis, malesuada diam in.</p>
+          <img src="./assets/icons/battle.png" alt="atack">
+          <p>Este robô foi projetado inicialmente para competição idealizado para realizar embates físicos com suas poderosas armas contra demais robôs
+            raio/velocidade</p>
         </div>
         <div class="item">
-          <img src="./assets/icons/broken-shield.png" alt="">
-          <p>Non turpis get laoreet purus dictum quisvitae ornare. Quisque quis augue convallis, malesuada diam in.</p>
+          <img src="./assets/icons/broken-shield.png" alt="velocity">
+          <p>Ele é destaque também em sua agilidade e mobilidade o que faz do mesmo um possível robô para entrega de objetos se necessário
+            Força.</p>
         </div>
         <div class="item">
-          <img src="./assets/icons/robots.png" alt="">
-          <p>Non turpis get laoreet purus dictum quisvitae ornare. Quisque quis augue convallis, malesuada diam in.</p>
+          <img src="./assets/icons/robots.png" alt="defence">
+          <p>Este robô se torna perfeito também pela sua força que faz do mesmo muito bom em levar objetos e um bom combatente físico.</p>
         </div>
       </div>
     </div>
